package com.nccformation.gestiondestock.model;

public enum StatutCommande {
    EN_COURS,
    LIVREE,
    ANNULEE
} 