package com.nccformation.gestiondestock.model;

public enum TypeMouvementStock {
    ENTREE,
    SORTIE,
    CORRECTION_POS,
    CORRECTION_NEG
} 